[tool.poetry]
name = "mdinfo"
version = "0.2.0"
description = "Print file metadata in various formats using a metadata template system."
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
click = "^8.1.3"
cloup = "^2.0.0.post1"
"pdfminer.six" = "^20221105"
pluggy = "^1.0.0"
python-docx = "^0.8.11"
rich = "^13.3.1"
textX = "^4.0.1"
tinytag = "^1.8.1"
pathvalidate = "^2.5.2"
datetime-tzutils = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
bump2version = "^1.0.1"
cogapp = "^3.3.0"
freezegun = "^1.2.2"
doit = "^0.36.0"
build = "^0.10.0"

[tool.poetry.scripts]
mdinfo = "mdinfo.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
